# 2_semesterprojekt

./: .gitignore  CMakeLists.txt  UserInterface.h  a.out  main.cpp
Communication with Atmega proof of concept/ProofOfConcept/: ATmega.c  ATmegaVariableThreshold.c  CMakeLists.txt  OLD(NOT NEEDED ANYMORE) initMagVM.h  database_init.txt  gripper.h  gripperDummy.h  initMagVM.h  main.cpp  test.db
Communication with Atmega proof of concept/build-ProofOfConcept-Desktop-Debug/: CMakeCache.txt  Makefile  ProofOfConcept  cmake_install.cmake
Communication with Atmega proof of concept/build-ProofOfConcept-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-fab6f6d5aff6a9430cb3.json  cmakeFiles-v1-af8925f881ac3ab300cd.json  codemodel-v2-9595dab4736fb5c1bc3c.json  directory-.-Debug-ae5d4ff50d33c6e56640.json  index-2024-05-08T10-57-54-0831.json  target-ProofOfConcept-Debug-2e8c6ac914b190894a1f.json
Communication with Atmega proof of concept/build-ProofOfConcept-Desktop_Qt_6_6_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  ProofOfConcept  Sqltest  build.ninja  cmake_install.cmake
Communication with Atmega proof of concept/build-ProofOfConcept-Desktop_Qt_6_6_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-8c2324ca860e7a604a63.json  cmakeFiles-v1-1f99e2acabed62547f00.json  cmakeFiles-v1-4171078593c6db4e5535.json  codemodel-v2-8a64e40de4a2559844b6.json  codemodel-v2-e9b56ab64ef09b0f814d.json  codemodel-v2-f82807d1154779e8c833.json  directory-.-Debug-7092293f914c851c68da.json  directory-.-Debug-81b2bea53007b0ed1179.json  directory-.-Debug-d679e2384918fdc7e015.json  index-2024-03-21T09-01-28-0906.json  index-2024-04-09T13-30-41-0944.json  index-2024-04-11T07-37-02-0639.json  target-ProofOfConcept-Debug-6fb759f06f4249be8a95.json  target-ProofOfConcept-Debug-a1855ce1395b3e342731.json  target-ProofOfConcept-Debug-e5706365c55d75c26e96.json
Communication with Atmega proof of concept/build-ProofOfConcept-Desktop_Qt_6_6_2_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-f208d58b74664827b414.json  codemodel-v2-727b92aec101f712fe77.json  codemodel-v2-85ddac5709d0998021d3.json  index-2024-04-06T07-31-06-0536.json  index-2024-04-06T08-21-38-0614.json  target-ProofOfConcept-Debug-3be01f5e834bd06b2724.json  target-ProofOfConcept-Debug-3fd23e1c50efc8d34468.json
Compination/: CMakeLists.txt  main.cpp
Control af UR/: ReadME.txt
FK_func/: CMakeLists.txt  FK_func.cpp  Projekfunction.cpp  Projekfunction.h  Projekfunction_data.h  Projekfunction_initialize.cpp  Projekfunction_initialize.h  Projekfunction_terminate.cpp  Projekfunction_terminate.h  Projekfunction_types.h  a.out  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  fkfunc.cpp  fkfunc.h  fkfunc_data.h  fkfunc_initialize.cpp  fkfunc_initialize.h  fkfunc_terminate.cpp  fkfunc_terminate.h  fkfunc_types.h  gcGuiReport.mat  main.cpp  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  sqrt.cpp  sqrt.h  svd.cpp  svd.h  transformation.h  xaxpy.cpp  (+11 more)
FK_func/examples/: main.cpp  main.h
FK_func/html/: report.mldatx
FK_func/interface/: _coder_Projekfunction_api.cpp  _coder_Projekfunction_api.h  _coder_Projekfunction_info.cpp  _coder_Projekfunction_info.h  _coder_Projekfunction_mex.cpp  _coder_Projekfunction_mex.h  _coder_fkfunc_api.cpp  _coder_fkfunc_api.h  _coder_fkfunc_info.cpp  _coder_fkfunc_info.h  _coder_fkfunc_mex.cpp  _coder_fkfunc_mex.h
GRIPPER READY FOR USE/: gripper.h  gripperDummy.h  main(example).cpp
PickAndPlace_allCups/: a.out  main_test.cpp  pile.h  pyramide.h  vec.h
Test/: CMakeLists.txt  Position_test.cpp
cups/build-src-Desktop_Qt_6_6_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  Cups  build.ninja  cmake_install.cmake
cups/build-src-Desktop_Qt_6_6_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-4343245acb99129862f8.json  cmakeFiles-v1-fefebf26a2b464f188e0.json  codemodel-v2-44d651ae44d32f1a2e21.json  index-2024-03-09T19-03-56-0001.json  target-Cups-Debug-6702c116413aeb6c3e9f.json
cups/build-src-Desktop_Qt_6_6_2_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-62b786fb83a99ba73837.json  index-2024-03-09T18-40-53-0808.json  target-Cups-Debug-d556f602114a8acd9d43.json
cups/src/: CMakeLists.txt  a.out  main.cpp  pile.h  pyramid.h  vec.h
